--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,5 @@ VUE_APP_CURRENTMODE='development'
 
 VUE_APP_SITE='//localhost:8080'
 
-VUE_APP_API='//127.0.0.1:83'
+//VUE_APP_API='//127.0.0.1:83'
+VUE_APP_API='https://api.mabuzki.com'
