--- a/package.json
+++ b/package.json
@@ -15,28 +15,29 @@
     "croppie": "^2.6.3",
     "lazysizes": "^4.1.6",
     "loadsh": "0.0.3",
-	"vee-validate": "^2.0.0-rc.23",
     "qs": "^6.6.0",
-    "vue": "^2.6.8",
+    "vee-validate": "^2.0.0-rc.23",
+    "vue": "^2.6.9",
     "vue-bus": "^1.2.0",
     "vue-croppie": "^1.3.13",
     "vue-i18n": "^8.9.0",
     "vue-js-modal": "^1.3.28",
     "vue-router": "^3.0.2",
     "vue-toasted": "^1.1.26",
-    "vue-visual": "^0.5.2"
+    "vue-visual": "^0.5.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
+    "@vue/cli-plugin-babel": "^3.5.1",
+    "@vue/cli-plugin-eslint": "^3.5.1",
+    "@vue/cli-service": "^3.5.1",
     "babel-eslint": "^10.0.1",
     "compression-webpack-plugin": "^2.0.0",
-    "eslint": "^5.15.1",
+    "eslint": "^5.15.2",
     "eslint-plugin-vue": "^5.2.2",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.8"
+    "vue-template-compiler": "^2.6.9"
   },
   "eslintConfig": {
     "root": true,
