--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "bulma": "^0.7.4",
-    "croppie": "^2.6.3",
-    "lazysizes": "^4.1.7",
+    "lazysizes": "^4.1.8",
     "loadsh": "0.0.3",
     "qs": "^6.7.0",
+    "vconsole": "^3.3.0",
     "vee-validate": "^2.0.0-rc.23",
     "vue": "^2.6.10",
     "vue-bus": "^1.2.1",
-    "vue-croppie": "^1.3.13",
-    "vue-i18n": "^8.10.0",
-    "vue-js-modal": "^1.3.28",
-    "vue-router": "^3.0.2",
+    "vue-croppie": "^2.0.1",
+    "vue-i18n": "^8.11.1",
+    "vue-js-modal": "^1.3.31",
+    "vue-router": "^3.0.6",
     "vue-toasted": "^1.1.26",
     "vue-visual": "^0.5.2",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.5",
-    "@vue/cli-plugin-eslint": "^3.5.1",
-    "@vue/cli-service": "^3.5.3",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
     "babel-eslint": "^10.0.1",
     "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.2",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
