--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,5 @@ VUE_APP_CURRENTMODE='development'
 
 VUE_APP_SITE='//localhost:8080'
 
-VUE_APP_API='http://192.168.7.105:83'
-//VUE_APP_API='https://api.mabuzki.com'
+//VUE_APP_API='http://192.168.7.105:83'
+VUE_APP_API='https://api.mabuzki.com'
