--- a/package.json
+++ b/package.json
@@ -8,36 +8,37 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@johmun/vue-tags-input": "^2.0.1",
-    "animate.css": "^3.7.0",
-    "axios": "^0.18.0",
-    "bulma": "^0.7.4",
-    "lazysizes": "^4.1.8",
-    "loadsh": "0.0.3",
-    "qs": "^6.7.0",
-    "vconsole": "^3.3.0",
+    "@johmun/vue-tags-input": "^2.1.0",
+    "animate.css": "^3.7.2",
+    "axios": "^0.19.2",
+    "bulma": "^0.8.0",
+    "core-js": "^3.6.4",
+    "lazysizes": "^5.2.0",
+    "loadsh": "0.0.4",
+    "qs": "^6.9.1",
+    "vconsole": "^3.3.4",
     "vee-validate": "^2.0.0-rc.23",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-bus": "^1.2.1",
     "vue-croppie": "^2.0.1",
-    "vue-i18n": "^8.11.1",
-    "vue-js-modal": "^1.3.31",
-    "vue-router": "^3.0.6",
-    "vue-toasted": "^1.1.26",
-    "vue-visual": "^0.5.2",
-    "vuex": "^3.1.0"
+    "vue-i18n": "^8.15.3",
+    "vue-js-modal": "^1.3.33",
+    "vue-router": "^3.1.5",
+    "vue-toasted": "^1.1.27",
+    "vue-visual": "^1.0.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
-    "babel-eslint": "^10.0.1",
-    "compression-webpack-plugin": "^2.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "@vue/cli-plugin-babel": "~4.2.2",
+    "@vue/cli-plugin-eslint": "~4.2.2",
+    "@vue/cli-service": "~4.2.2",
+    "babel-eslint": "^10.0.3",
+    "compression-webpack-plugin": "^3.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.1.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^7.3.1",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
