--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.4",
     "lazysizes": "^5.2.0",
     "loadsh": "0.0.4",
+    "lodash": "^4.17.15",
     "qs": "^6.9.1",
     "vconsole": "^3.3.4",
     "vee-validate": "^2.0.0-rc.23",
@@ -36,6 +37,7 @@
     "compression-webpack-plugin": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.1",
+    "mixin-deep": "^2.0.1",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.11"
